# turbopump

./: .gitignore  Cargo.toml  flake.nix  memory.x  sam3x8e.pack  sam3x8e.yaml
sam3x8e/: Cargo.toml
sam3x8e/src/adc/: cr.rs  emr.rs  idr.rs  ier.rs  imr.rs  isr.rs  mr.rs
sam3x8e/src/can0/: br.rs  sr.rs
sam3x8e/src/can1/: ecr.rs  mr.rs  wpmr.rs
sam3x8e/src/chipid/: cidr.rs
sam3x8e/src/dmac/: cfg4.rs  cfg5.rs  chdr.rs  cher.rs  chsr.rs  creq.rs  ctrla0.rs  ctrla1.rs  ctrla2.rs  ctrla3.rs  ctrla4.rs  ctrla5.rs  ctrlb4.rs  ctrlb5.rs  daddr4.rs  daddr5.rs  dscr4.rs  dscr5.rs  ebcidr.rs  ebcier.rs  ebcimr.rs  ebcisr.rs  last.rs  saddr4.rs  saddr5.rs  sreq.rs
sam3x8e/src/efc0/: fcr.rs  fsr.rs
sam3x8e/src/efc1/: fmr.rs
sam3x8e/src/emac/: ale.rs  cse.rs  dtf.rs  ecol.rs  ele.rs  fcse.rs  fro.rs  fto.rs  hrb.rs  hrt.rs  idr.rs  ier.rs  imr.rs  isr.rs  lcol.rs  man.rs  mcf.rs  ncfgr.rs  ncr.rs  pfr.rs  ptr.rs  rbqp.rs  rja.rs  rle.rs  rov.rs  rre.rs  rse.rs  rsr.rs  sa1b.rs  sa1t.rs  sa2b.rs  sa2t.rs  sa3b.rs  sa3t.rs  sa4b.rs  sa4t.rs  scf.rs  ste.rs  tbqp.rs  tid.rs  (+4 more)
sam3x8e/src/hsmci/: dma.rs  fifo.rs  idr.rs  ier.rs  imr.rs  mr.rs  sdcr.rs  sr.rs
sam3x8e/src/matrix/: ccfg_sysio.rs  matrix_mrcr.rs  matrix_pras0.rs  matrix_pras1.rs  matrix_pras2.rs  matrix_pras3.rs  matrix_pras4.rs  matrix_pras5.rs  matrix_pras6.rs  matrix_pras7.rs  matrix_pras8.rs
sam3x8e/src/pioa/: ifdgsr.rs  pusr.rs
sam3x8e/src/piob/: difsr.rs
sam3x8e/src/pioc/: scifsr.rs
sam3x8e/src/piod/: absr.rs
sam3x8e/src/pmc/: ckgr_mcfr.rs  ckgr_mor.rs  ckgr_uckr.rs  pmc_fsmr.rs  pmc_idr.rs  pmc_ier.rs  pmc_imr.rs  pmc_mckr.rs  pmc_pcdr1.rs  pmc_pcer1.rs  pmc_pck.rs  pmc_pcr.rs  pmc_pcsr1.rs  pmc_scdr.rs  pmc_scer.rs  pmc_scsr.rs  pmc_sr.rs
sam3x8e/src/pwm/: ccnt4.rs  ccnt5.rs  ccnt6.rs  ccnt7.rs  cdty4.rs  cdty5.rs  cdty6.rs  cdty7.rs  cdtyupd4.rs  cdtyupd5.rs  cdtyupd6.rs  cdtyupd7.rs  cmr4.rs  cmr5.rs  cmr6.rs  cmr7.rs  cprd4.rs  cprd5.rs  cprd6.rs  cprd7.rs  cprdupd4.rs  cprdupd5.rs  cprdupd6.rs  cprdupd7.rs  dis.rs  dt4.rs  dt5.rs  dt6.rs  dt7.rs  dtupd4.rs  dtupd5.rs  dtupd6.rs  dtupd7.rs  ena.rs  fpe1.rs  fpe2.rs  fpv.rs  idr1.rs  ier1.rs  imr1.rs  (+10 more)
sam3x8e/src/rtc/: calr.rs  idr.rs  ier.rs  mr.rs  sccr.rs  sr.rs  wpmr.rs
sam3x8e/src/rtt/: mr.rs
sam3x8e/src/smc/: addr.rs  bank.rs  cfg.rs  ctrl.rs  cycle4.rs  cycle5.rs  cycle6.rs  cycle7.rs  ecc_ctrl.rs  ecc_md.rs  ecc_pr0.rs  (+62 more)
(+135 files in other folders)
