[package]
authors = ["Viktor Kleen <viktor@kleen.org>"]
name = "turbo-run"
edition = "2021"
version = "0.1.0"

[lib]
harness = false

[[test]]
name = "integration"
harness = false

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
sam3x8e = { path = "sam3x8e", features = ["rt"] }
systick-monotonic = { version = "1.0" }
cortex-m-rtic = "1.1"

[dev-dependencies]
defmt-test = "0.3"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 'z'         # <-
overflow-checks = true  # <-

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true # <-
incremental = false
opt-level = 3           # <-
overflow-checks = true  # <-

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false # <-
incremental = false
lto = 'fat'
opt-level = 3            # <-
overflow-checks = false  # <-

[patch.crates-io]
defmt = { git = "https://github.com/knurling-rs/defmt", rev = "0cb72e6d362ab040739559da32b68733bce7589f" }
defmt-rtt = { git = "https://github.com/knurling-rs/defmt", rev = "0cb72e6d362ab040739559da32b68733bce7589f" }
defmt-test = { git = "https://github.com/knurling-rs/defmt", rev = "0cb72e6d362ab040739559da32b68733bce7589f" }
panic-probe = { git = "https://github.com/knurling-rs/defmt", rev = "0cb72e6d362ab040739559da32b68733bce7589f" }
